.dev/multipass/cluster/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: vault
  labels:
    app: vault
spec:
  selector:
    app: vault
  ports:
    - name: http
      port: 8200
      targetPort: 8200
